--- a/2.domino.html
+++ b/2.domino.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <Style>
+        *{margin: 0;padding: 0;list-style: none;box-sizing: border-box;}
+        a{text-decoration: none;}
+        body{height:3000px;width:100%;position: relative;background-color: #fff;}
+        .wrap{position: relative;width:100%;height: auto;}
+        .top{width:100%;height:100px;position: relative;}
+        .top1{width:1100px;height: 100px;line-height: 100px;margin: 0 auto;position: relative;}
+        .top1>.butt1{width: 50px;height: 50px;position: absolute;
+        left: 20px;top: 23px;}
+        .top1>.butt1>a{display: block;background: url(images/spr_btn.png);width: 40px;height: 40px;background-position: 12px -25px;}
+    </Style>
 </head>
 <body>
     <div class="wrap">
